--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.css filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
+*.yml filter=lfs diff=lfs merge=lfs -text
