--- a/data/.gitattributes
+++ b/data/.gitattributes
@@ -1,1 +1,2 @@
 Safe4Child_VirtualReality_MetaQuest2-3_Standalone_v1.zip filter=lfs diff=lfs merge=lfs -text
+data/*.zip filter=lfs diff=lfs merge=lfs -text
