Fix: Added large file using Git LFS

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+M:/OneDrive[[:space:]]-[[:space:]]Turun[[:space:]]ammattikorkeakoulu/3rd[[:space:]]year/2nd/Internship[[:space:]]1/project/data/Safe4Child_VirtualReality_MetaQuest2-3_Standalone_v1.zip filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.css filter=lfs diff=lfs merge=lfs -text
