--- a/data/.gitattributes
+++ b/data/.gitattributes
@@ -1,2 +1,8 @@
 Safe4Child_VirtualReality_MetaQuest2-3_Standalone_v1.zip filter=lfs diff=lfs merge=lfs -text
-data/*.zip filter=lfs diff=lfs merge=lfs -text
+*.md filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.css filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.html filter=lfs diff=lfs merge=lfs -text
+*.yml filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
